syntax="proto3";

option java_package = "ru.aston.microservice.one";
option java_multiple_files = true;

message MessageRequest{
  int64 id = 1;
}
message MessageResponse {
  string message = 1;

}

service MessageService {
  rpc getMessage(MessageRequest) returns (MessageResponse);
}
